; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv04_dac.c_nv04_dac_dpms.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv04_dac.c_nv04_dac_dpms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_encoder = type { i32 }
%struct.nouveau_encoder = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.nouveau_drm = type { i32 }

@.str = private unnamed_addr constant [49 x i8] c"Setting dpms mode %d on vga encoder (output %d)\0A\00", align 1
@DRM_MODE_DPMS_ON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_encoder*, i32)* @nv04_dac_dpms to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv04_dac_dpms(%struct.drm_encoder* %0, i32 %1) #0 {
  %3 = alloca %struct.drm_encoder*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nouveau_encoder*, align 8
  %6 = alloca %struct.nouveau_drm*, align 8
  store %struct.drm_encoder* %0, %struct.drm_encoder** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.drm_encoder*, %struct.drm_encoder** %3, align 8
  %8 = call %struct.nouveau_encoder* @nouveau_encoder(%struct.drm_encoder* %7)
  store %struct.nouveau_encoder* %8, %struct.nouveau_encoder** %5, align 8
  %9 = load %struct.drm_encoder*, %struct.drm_encoder** %3, align 8
  %10 = getelementptr inbounds %struct.drm_encoder, %struct.drm_encoder* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.nouveau_drm* @nouveau_drm(i32 %11)
  store %struct.nouveau_drm* %12, %struct.nouveau_drm** %6, align 8
  %13 = load %struct.nouveau_encoder*, %struct.nouveau_encoder** %5, align 8
  %14 = getelementptr inbounds %struct.nouveau_encoder, %struct.nouveau_encoder* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  br label %37

19:                                               ; preds = %2
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.nouveau_encoder*, %struct.nouveau_encoder** %5, align 8
  %22 = getelementptr inbounds %struct.nouveau_encoder, %struct.nouveau_encoder* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = load %struct.nouveau_drm*, %struct.nouveau_drm** %6, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load %struct.nouveau_encoder*, %struct.nouveau_encoder** %5, align 8
  %26 = getelementptr inbounds %struct.nouveau_encoder, %struct.nouveau_encoder* %25, i32 0, i32 1
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @NV_DEBUG(%struct.nouveau_drm* %23, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %29)
  %31 = load %struct.drm_encoder*, %struct.drm_encoder** %3, align 8
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @DRM_MODE_DPMS_ON, align 4
  %34 = icmp eq i32 %32, %33
  %35 = zext i1 %34 to i32
  %36 = call i32 @nv04_dac_update_dacclk(%struct.drm_encoder* %31, i32 %35)
  br label %37

37:                                               ; preds = %19, %18
  ret void
}

declare dso_local %struct.nouveau_encoder* @nouveau_encoder(%struct.drm_encoder*) #1

declare dso_local %struct.nouveau_drm* @nouveau_drm(i32) #1

declare dso_local i32 @NV_DEBUG(%struct.nouveau_drm*, i8*, i32, i32) #1

declare dso_local i32 @nv04_dac_update_dacclk(%struct.drm_encoder*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
